--- a/provider-default-aws.yaml
+++ b/provider-default-aws.yaml
@@ -1,11 +1,11 @@
 apiVersion: aws.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: default-aws
+  name: default
 spec:
   credentials:
     source: Secret
     secretRef:
       namespace: crossplane-system
       name: aws-creds
-      key: key
+      key: creds
