--- a/package/composition-azure.yaml
+++ b/package/composition-azure.yaml
@@ -7,7 +7,7 @@ metadata:
     cluster: aks
 spec:
   compositeTypeRef:
-    apiVersion: devopstoolkitseries.com/v1alpha1
+    apiVersion: bkauf.com/v1
     kind: CompositeKubernetesCluster
   patchSets:
   - name: metadata
