--- a/package/composition-gcp.yaml
+++ b/package/composition-gcp.yaml
@@ -7,7 +7,7 @@ metadata:
     cluster: gke
 spec:
   compositeTypeRef:
-    apiVersion: devopstoolkitseries.com/v1alpha1
+    apiVersion: bkauf.com/v1
     kind: CompositeKubernetesCluster
   patchSets:
   - name: metadata
@@ -53,7 +53,7 @@ spec:
       matchString: "RUNNING"
   - name: nodepool
     base:
-      apiVersion: container.gcp.crossplane.io/v1alpha1
+      apiVersion: container.gcp.crossplane.io/v1beta1
       kind: NodePool
       spec:
         forProvider:
