--- a/cluster-aws.yaml
+++ b/cluster-aws.yaml
@@ -1,17 +1,17 @@
 apiVersion: bkauf.com/v1
-kind: CompositeKubernetesCluster
+kind: cluster
 metadata:
   name: a-team
   labels:
     cluster-owner: bkauf
 spec:
   compositionRef:
-    # Possible values cluster-google, cluster-azure, cluster-aws
+    # Possible values cluster-gcp, cluster-azure, cluster-aws
     name: cluster-aws
   parameters:
     # Possible values small, medium, large
     nodeSize: medium
-    version: "1.22"
+    version: "1.21"
     #minNodeCount: 2
   writeConnectionSecretToRef:
     namespace: a-team
