--- a/package/xrd.yaml
+++ b/package/xrd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: compositekubernetesclusters.bkauf.com
+  name: clusters.bkauf.com
 spec:
   connectionSecretKeys:
   - kubeconfig
@@ -9,8 +9,8 @@ spec:
     name: cluster-aws
   group: bkauf.com
   names:
-    kind: CompositeKubernetesCluster
-    plural: compositekubernetesclusters
+    kind: cluster
+    plural: clusters
   claimNames:
     kind: KubernetesCluster
     plural: kubernetesclusters
