--- a/provider-default-aws.yaml
+++ b/provider-default-aws.yaml
@@ -1,7 +1,7 @@
 apiVersion: aws.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: default
+  name: default-aws
 spec:
   credentials:
     source: Secret
