--- a/package/xrd.yaml
+++ b/package/xrd.yaml
@@ -48,6 +48,9 @@ spec:
               clusterName:
                 description: The name of the cluster
                 type: string
+              cluster:
+                description: The name of the cluster
+                type: string
               controlPlaneStatus:
                 description: The status of the control plane
                 type: string
