--- a/cluster-azure.yaml
+++ b/cluster-azure.yaml
@@ -1,18 +1,18 @@
 apiVersion: bkauf.com/v1
 kind: cluster
 metadata:
-  name: a-team
+  name: c-team
   labels:
     cluster-owner: bkauf
 spec:
   compositionRef:
     # Possible values cluster-gcp, cluster-azure, cluster-aws
-    name: cluster-aws
+    name: cluster-azure
   parameters:
     # Possible values small, medium, large
     nodeSize: medium
-    version: "1.22"
-    #minNodeCount: 2
+   # version: "1.22"
+    minNodeCount: 2
   writeConnectionSecretToRef:
-    namespace: a-team
+    namespace: c-team
     name: cluster
