--- a/cluster.yaml
+++ b/cluster.yaml
@@ -1,12 +1,14 @@
 apiVersion: bkauf.com/v1
 kind: cluster
 metadata:
-  name: b-team
+  name: test-cluster
+  annotations:
+    crossplane.io/external-name: test-cluster
   labels:
     cluster-owner: bkauf
 spec:
   compositionRef:
-    # Possible values cluster-gocp, cluster-azure, cluster-aws
+    # Possible values cluster-gcp, cluster-azure, cluster-aws
     name: cluster-google
   parameters:
     # Possible values small, medium, large
