--- a/package/xrd.yaml
+++ b/package/xrd.yaml
@@ -28,6 +28,10 @@ spec:
               parameters:
                 type: object
                 properties:
+                  eksVersion:
+                    description: The kubernetes version to use
+                    type: string
+                    default: "1.22"
                   version:
                     description: The Kubernetes version for the cluster.
                     type: string
