--- a/package/composition-gcp.yaml
+++ b/package/composition-gcp.yaml
@@ -3,98 +3,164 @@ kind: Composition
 metadata:
   name: cluster-gcp
   labels:
-    provider: google
+    crossplane.io/xrd: compositeclusters.demo.anthos.com
+    provider: gcp
     cluster: gke
 spec:
   compositeTypeRef:
-    apiVersion: bkauf.com/v1
-    kind: cluster
+    apiVersion: demo.anthos.com/v1
+    kind:  CompositeCluster
   patchSets:
   - name: metadata
     patches:
     - fromFieldPath: metadata.labels
   resources:
-  - name: gkecluster
+  - name: cluster
     base:
       apiVersion: container.gcp.crossplane.io/v1beta2
       kind: Cluster
       spec:
+        providerConfigRef:
+          name: default-gcp
         forProvider:
+          initialClusterVersion: "1.23"
           location: us-east1
-          masterAuth:
-            username:
-          initialClusterVersion: latest
+          networkConfig:
+            enableIntraNodeVisibility: true
+          loggingService: logging.googleapis.com/kubernetes
+          monitoringService: monitoring.googleapis.com/kubernetes
+          addonsConfig:
+            gcePersistentDiskCsiDriverConfig:
+              enabled: true
+          network: "default"
         writeConnectionSecretToRef:
-          namespace: crossplane-system
+          namespace: default
     patches:
-    - type: PatchSet
-      patchSetName: metadata
-    - fromFieldPath: "metadata.uid"
-      toFieldPath: "spec.writeConnectionSecretToRef.name"
-      transforms:
-      - type: string
-        string:
-          fmt: "%s-gkecluster"
-    - fromFieldPath: spec.writeConnectionSecretToRef.namespace
-      toFieldPath: spec.writeConnectionSecretToRef.namespace
-    - fromFieldPath: spec.parameters.version
+    - fromFieldPath: metadata.annotations[crossplane.io/external-name]
+      toFieldPath: metadata.annotations[crossplane.io/external-name]
+    - fromFieldPath: spec.parameters.k8sVersion
       toFieldPath: spec.forProvider.initialClusterVersion
+    - fromFieldPath: metadata.uid
+      toFieldPath: spec.writeConnectionSecretToRef.name
+      transforms:
+        - type: string
+          string:
+            fmt: "%s-gkecluster"
     - type: ToCompositeFieldPath
       fromFieldPath: metadata.annotations[crossplane.io/external-name]
       toFieldPath: status.clusterName
     - type: ToCompositeFieldPath
+      fromFieldPath: metadata.annotations[crossplane.io/external-name]
+      toFieldPath: status.membershipId
+    - type: ToCompositeFieldPath
+      fromFieldPath: status.atProvider.selfLink
+      toFieldPath: status.clusterSelfLink
+    - type: ToCompositeFieldPath
       fromFieldPath: status.atProvider.status
       toFieldPath: status.controlPlaneStatus
-    connectionDetails:
-    - fromConnectionSecretKey: kubeconfig
+    - fromFieldPath: spec.writeConnectionSecretToRef.namespace
+      toFieldPath: spec.writeConnectionSecretToRef.namespace
     readinessChecks:
     - type: MatchString
-      fieldPath: "status.atProvider.status"
-      matchString: "RUNNING"
+      fieldPath: status.atProvider.status
+      matchString: ACTIVE
+    connectionDetails:
+      - fromConnectionSecretKey: kubeconfig
   - name: nodepool
     base:
       apiVersion: container.gcp.crossplane.io/v1beta1
       kind: NodePool
       spec:
+        providerConfigRef:
+          name: default-gcp
         forProvider:
-          locations:
-          - us-east1-b
-          - us-east1-c
-          - us-east1-d
-          clusterSelector:
+          clusterRef:
             matchControllerRef: true
           config:
-            preemptible: false
+            machineType: n1-standard-1
+            diskSizeGb: 120
+            diskType: pd-ssd
+            imageType: cos_containerd
+            labels:
+              test-label: crossplane-created
             oauthScopes:
-            - https://www.googleapis.com/auth/cloud-platform
-          autoscaling:
-            enabled: true
-            maxNodeCount: 3
-          management:
-            autoRepair: false
-            autoUpgrade: false
+            - "https://www.googleapis.com/auth/devstorage.read_only"
+            - "https://www.googleapis.com/auth/logging.write"
+            - "https://www.googleapis.com/auth/monitoring"
+            - "https://www.googleapis.com/auth/servicecontrol"
+            - "https://www.googleapis.com/auth/service.management.readonly"
+            - "https://www.googleapis.com/auth/trace.append"      
+          initialNodeCount: 3
+          locations:
+            - "us-east1-b"
     patches:
-    - type: PatchSet
-      patchSetName: metadata
-    - fromFieldPath: spec.writeConnectionSecretToRef.namespace
-      toFieldPath: spec.credentials.secretRef.namespace
-    - fromFieldPath: spec.parameters.minNodeCount
-      toFieldPath: spec.forProvider.initialNodeCount
-    - fromFieldPath: spec.parameters.minNodeCount
-      toFieldPath: spec.forProvider.autoscaling.minNodeCount
+    - fromFieldPath: status.clusterName
+      toFieldPath: spec.forProvider.clusterRef.name
     - fromFieldPath: spec.parameters.nodeSize
       toFieldPath: spec.forProvider.config.machineType
       transforms:
-      - type: map
-        map:
-          small: e2-standard-2
-          medium: e2-standard-4
-          large: e2-standard-16
+        - type: map
+          map:
+            small: e2-small
+            medium: e2-medium
+            large: e2-standard-2
     - type: ToCompositeFieldPath
       fromFieldPath: status.atProvider.status
       toFieldPath: status.nodePoolStatus
     readinessChecks:
     - type: MatchString
       fieldPath: status.atProvider.status
-      matchString: RUNNING
-  writeConnectionSecretsToNamespace: crossplane-system
+      matchString: ACTIVE
+  - name: hubmembership
+    base:
+      apiVersion: anthos.gcp.crossplane.io/v1alpha1
+      kind: HubMembership
+      spec:
+        providerConfigRef:
+          name: default-gcp
+    patches:
+    - fromFieldPath: status.membershipId
+      toFieldPath: spec.forProvider.membershipId
+    - fromFieldPath: status.clusterSelfLink
+      toFieldPath: spec.forProvider.GkeClusterId
+      transforms:
+        - type: string
+          string:
+            type: TrimPrefix
+            trim: "https://container.googleapis.com/v1/"
+  - name: feature
+    base:
+      apiVersion: anthos.gcp.crossplane.io/v1alpha1
+      kind: HubFeature
+      spec:
+        providerConfigRef:
+          name: default-gcp
+        forProvider:
+          location: global
+          featureName: configmanagement
+  - name: configSync
+    base:
+      apiVersion: anthos.gcp.crossplane.io/v1alpha1
+      kind: HubFeatureMembership
+      spec:
+        providerConfigRef:
+          name: default-gcp
+        forProvider:
+          location: global
+          feature: configmanagement
+          configManagement:
+            version: "1.12.0"
+            git:
+              secretType: none
+              repo: https://github.com/bkauf/anthos-crossplane-demo.git
+              policyDir: cluster-acm/
+              branch: master
+    patches:
+    - fromFieldPath: status.membershipId
+      toFieldPath: spec.forProvider.membership
+    #- fromFieldPath: spec.parameters.configSync.branch
+    #  toFieldPath: spec.forProvider.configManagement.git.branch
+    #- fromFieldPath: spec.parameters.configSync.repo
+    #  toFieldPath: spec.forProvider.configManagement.git.repo
+    #- fromFieldPath: spec.parameters.configSync.policyDir
+    #  toFieldPath: spec.forProvider.configManagement.git.policyDir
