--- a/provider-default-gcp.yaml
+++ b/provider-default-gcp.yaml
@@ -1,7 +1,7 @@
 apiVersion: gcp.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: default
+  name: default-gcp
 spec:
   projectID: anthos-multi-cloud-335819
   credentials:
