--- a/cluster-gcp.yaml
+++ b/cluster-gcp.yaml
@@ -1,7 +1,7 @@
 apiVersion: demo.anthos.com/v1
 kind: CompositeCluster 
 metadata:
-  name: b-team
+  name: test-cluster
   labels:
     cluster-owner: prod-cluster-2
 spec:
@@ -11,7 +11,7 @@ spec:
   parameters:
     # Possible values small, medium, large
     nodeSize: medium
-    k8sVersion: "1.23"
+    k8sVersion: "1.24"
     fleetProject: "261832825633"
     minNodeCount: 3
     adminUsers:
