--- a/package/composition-aws.yaml
+++ b/package/composition-aws.yaml
@@ -28,7 +28,7 @@ spec:
           name: default-aws
         forProvider:
           region: us-east-1
-          version: "1.23"
+          version: "1.24"
           resourcesVpcConfig:
             endpointPublicAccess: true
             subnetIdSelector:
@@ -381,77 +381,77 @@ spec:
                 matchLabels:
                   zone: us-east-1c
                   access: public
-  - name: attachedCluster
-    base:
-      apiVersion: anthos.gcp.crossplane.io/v1alpha1
-      kind: AttachedCluster
-      spec:
-        providerConfigRef: 
-          name: default-gcp
-        forProvider:
-          location: us-east4
-          distribution: eks
-          clusterCredentials:
-            source: Secret
-            secretRef:
-              namespace: default
-              key: kubeconfig
-    patches:
-    - type: ToCompositeFieldPath
-      fromFieldPath: status.atProvider.membershipId
-      toFieldPath: status.membershipId
-    - fromFieldPath: spec.parameters.adminUsers
-      toFieldPath: spec.forProvider.adminUsers
-    - fromFieldPath: spec.parameters.fleetProject
-      toFieldPath: spec.forProvider.fleet.project
-      transforms:
-        - type: string
-          string:
-            fmt: "projects/%s"
-    - fromFieldPath: status.odicIssuerUrl
-      toFieldPath: spec.forProvider.authority.issuerUrl
-    - fromFieldPath: spec.parameters.k8sVersion
-      toFieldPath: spec.forProvider.platformVersion
-      transforms:
-        - type: map
-          map:
-            1.23: 1.23.0-gke.1
-    - fromFieldPath: "metadata.uid"
-      toFieldPath: spec.forProvider.clusterCredentials.secretRef.name
-      transforms:
-        - type: string
-          string:
-            fmt: "%s-ekscluster"
-  - name: feature
-    base:
-      apiVersion: anthos.gcp.crossplane.io/v1alpha1
-      kind: HubFeature
-      spec:
-        providerConfigRef:
-          name: default-gcp
-        forProvider:
-          location: global
-          featureName: configmanagement
-  - name: configSync
-    base:
-      apiVersion: anthos.gcp.crossplane.io/v1alpha1
-      kind: HubFeatureMembership
-      spec:
-        providerConfigRef:
-          name: default-gcp
-        forProvider:
-          location: global
-          feature: configmanagement
-          configManagement:
-            version: "1.12.0"
-            git:
-              secretType: none
-              repo: https://github.com/bkauf/anthos-crossplane-demo.git
-              policyDir: cluster-acm/
-              branch: master
-    patches:
-    - fromFieldPath: status.membershipId
-      toFieldPath: spec.forProvider.membership
+  # - name: attachedCluster
+  #   base:
+  #     apiVersion: anthos.gcp.crossplane.io/v1alpha1
+  #     kind: AttachedCluster
+  #     spec:
+  #       providerConfigRef: 
+  #         name: default-gcp
+  #       forProvider:
+  #         location: us-east4
+  #         distribution: eks
+  #         clusterCredentials:
+  #           source: Secret
+  #           secretRef:
+  #             namespace: default
+  #             key: kubeconfig
+  #   patches:
+  #   - type: ToCompositeFieldPath
+  #     fromFieldPath: status.atProvider.membershipId
+  #     toFieldPath: status.membershipId
+  #   - fromFieldPath: spec.parameters.adminUsers
+  #     toFieldPath: spec.forProvider.adminUsers
+  #   - fromFieldPath: spec.parameters.fleetProject
+  #     toFieldPath: spec.forProvider.fleet.project
+  #     transforms:
+  #       - type: string
+  #         string:
+  #           fmt: "projects/%s"
+  #   - fromFieldPath: status.odicIssuerUrl
+  #     toFieldPath: spec.forProvider.authority.issuerUrl
+  #   - fromFieldPath: spec.parameters.k8sVersion
+  #     toFieldPath: spec.forProvider.platformVersion
+  #     transforms:
+  #       - type: map
+  #         map:
+  #           1.23: 1.23.0-gke.1
+  #   - fromFieldPath: "metadata.uid"
+  #     toFieldPath: spec.forProvider.clusterCredentials.secretRef.name
+  #     transforms:
+  #       - type: string
+  #         string:
+  #           fmt: "%s-ekscluster"
+  # - name: feature
+  #   base:
+  #     apiVersion: anthos.gcp.crossplane.io/v1alpha1
+  #     kind: HubFeature
+  #     spec:
+  #       providerConfigRef:
+  #         name: default-gcp
+  #       forProvider:
+  #         location: global
+  #         featureName: configmanagement
+  # - name: configSync
+  #   base:
+  #     apiVersion: anthos.gcp.crossplane.io/v1alpha1
+  #     kind: HubFeatureMembership
+  #     spec:
+  #       providerConfigRef:
+  #         name: default-gcp
+  #       forProvider:
+  #         location: global
+  #         feature: configmanagement
+  #         configManagement:
+  #           version: "1.12.0"
+  #           git:
+  #             secretType: none
+  #             repo: https://github.com/bkauf/anthos-crossplane-demo.git
+  #             policyDir: cluster-acm/
+  #             branch: master
+  #   patches:
+  #   - fromFieldPath: status.membershipId
+  #     toFieldPath: spec.forProvider.membership
    # - fromFieldPath: spec.parameters.configSync.branch
    #   toFieldPath: spec.forProvider.configManagement.git.branch
    # - fromFieldPath: spec.parameters.configSync.repo
