--- a/cluster-ns-scope.yaml
+++ b/cluster-ns-scope.yaml
@@ -1,21 +1,18 @@
 apiVersion: demo.anthos.com/v1
-kind: CompositeCluster 
+kind: Cluster
 metadata:
-  name: a-team
+  name: test-cluster
   labels:
-    cluster-owner: prod-cluster
+    cluster-owner: bkauf
 spec:
   compositionRef:
     # Possible values cluster-gcp, cluster-azure, cluster-aws
-    name: cluster-aws
+    name: cluster-gcp
   parameters:
     # Possible values small, medium, large
     nodeSize: medium
-    k8sVersion: "1.23"
+    k8sVersion: "1.24"
     fleetProject: "261832825633"
-    minNodeCount: 3  
+    minNodeCount: 3
     adminUsers:
-    - bkauf@google.com
-  writeConnectionSecretToRef:
-    namespace: default
-    name: a-team
+    - bkauf@google.com  
