--- a/ns-scoped-claims/nodepool-ns-scope.yaml
+++ b/ns-scoped-claims/nodepool-ns-scope.yaml
@@ -6,10 +6,10 @@ metadata:
     cluster-owner: bkauf
 spec:
   compositionRef:
-    # Possible values gcp-node-pool
-    name: gcp-node-pool
+    # Possible values gcp-node-pool, gcp-gke-nodepool-up
+    name: gcp-gke-nodepool-up
   parameters:
-    clusterName: "test-cluster-fd9rt-kcnxh"
+    clusterName: "upbound-cluster-m6str"
     # Possible values small, medium, large
     nodeSize: medium
-    minNodeCount: 3
+    minNodeCount: 1
