--- a/providers/aws-providerconfig.yaml
+++ b/providers/aws-providerconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: aws.crossplane.io/v1beta1
+apiVersion: aws.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: default-aws
@@ -7,5 +7,5 @@ spec:
     source: Secret
     secretRef:
       namespace: crossplane-system
-      name: aws-creds
+      name: aws-secret
       key: creds
