--- a/providers/gcp-providerconfig.yaml
+++ b/providers/gcp-providerconfig.yaml
@@ -1,7 +1,7 @@
-apiVersion: gcp.crossplane.io/v1beta1
+apiVersion: gcp.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: default-gcp
+  name: default-gcp-up
 spec:
   projectID: anthos-multi-cloud-335819
   credentials:
