--- a/providers/aws-providerconfig.yaml
+++ b/providers/aws-providerconfig.yaml
@@ -7,5 +7,5 @@ spec:
     source: Secret
     secretRef:
       namespace: crossplane-system
-      name: aws-secret
+      name: aws-creds
       key: creds
