--- a/ns-scoped-claims/cluster-ns-scope.yaml
+++ b/ns-scoped-claims/cluster-ns-scope.yaml
@@ -6,7 +6,7 @@ metadata:
     cluster-owner: bkauf
 spec:
   compositionRef:
-    # Possible values cluster-gcp-up, cluster-azure, cluster-aws
+    # Possible values cluster-gcp-gke, cluster-aws-eks
     name: cluster-aws-eks
   parameters:
     # Possible values small, medium, large
