--- a/providers/gcp-providerconfig.yaml
+++ b/providers/gcp-providerconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: gcp.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: default-gcp-up
+  name: default-gcp
 spec:
   projectID: anthos-multi-cloud-335819
   credentials:
