--- a/providers/azure-providerconfig.yaml
+++ b/providers/azure-providerconfig.yaml
@@ -7,5 +7,5 @@ spec:
     source: Secret
     secretRef:
       namespace: crossplane-system
-      name: azure-secret
+      name: azure-creds
       key: creds
