--- a/claims/cluster.yaml
+++ b/claims/cluster.yaml
@@ -1,11 +1,11 @@
 apiVersion: demo.anthos.com/v1
 kind: CompositeCluster 
 metadata:
-  name: upbound-cluster
+  name: k8s-cluster
 spec:
   compositionRef:
     # Possible values cluster-gcp-gke, cluster-aws-eks, cluster-azure-aks
-    name: cluster-azure-aks
+    name: cluster-gcp-gke
   parameters:
     # Possible values small, medium, large
     nodeSize: small
