--- a/providers/azure.yaml
+++ b/providers/azure.yaml
@@ -1,6 +1,6 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: upbound-provider-azure
+  name: provider-azure
 spec:
-  package: xpkg.upbound.io/upbound/provider-azure:v0.29.0
+  package: xpkg.upbound.io/upbound/provider-azure:v0.28.0
